@@ -176,6 +176,9 @@
       <name>Chris Eldredge</name>
     </contributor>
     <contributor>
+      <name>Jim Harrington</name>
+    </contributor>
+    <contributor>
       <name>Thomas Ledoux</name>
     </contributor>
     <contributor>
